--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.9",
     "nodemon": "^3.1.11",
+    "prettier": "^3.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
